src/main.css
.pageWidth {
  width: 90vw;
}
.pageHeight {
  height: 80vh;
}

margin-top: 68px;
.searchDial {
  margin-top: 68px;
}

.ocean-background {
  background-image: url('./app/global/resources/ocean-background.png');
  background-size: 100% 100%;
}
.login-tab {
  background-color: rgba(255, 255, 255, .5);
}

.fullWidth {
  width: 100vw;
}

.error {
  color: red;
  font-style: italic;
}

.menubarContainer {
  display: flex;
}

.search {
  margin-top: 40px;
}

md-dialog {
  width: 80vw;
}

.tweetButton:hover {
  cursor: pointer;
}

.tweetIcon {
  font-size: 48px;
}

.search:not(.md-input-invalid).md-input-focused .md-input {
    border-color: white
}

input[type=text].searchInput {
  background-color: rgb(255, 255, 255);
}

i {
  align-items: center;
  justify-content: center;
}

.tweetButton:hover {
    cursor: hand;
    border-color: rgb(255, 255, 255);
}

.SearchTabs {
  width: 70vw
}

.search-tab {
  width: 100%
}

.listUsage md-divider {
  margin-top: 10px;
  margin-bottom: 0; }

